fix overlapping input field btn in history

--- a/bbf_tautulli_in_organizr.css
+++ b/bbf_tautulli_in_organizr.css
@@ -300,6 +300,9 @@ select, .react-selectize.bootstrap3.root-node .react-selectize-control{
 select option {
   color: #000;
 }
+div.dataTables_filter input {
+  margin-left: 0px;
+}
 
 /* Graphs */
 .graphs-instance{
